# Storage-API

./: .env-non-dev.example  .env.example  Makefile  README.md  pyproject.toml  pytest.ini
app/: config.py  database.py  exceptions.py  main.py
app/dao/: base.py
app/order_items/: dao.py  models.py  schemas.py
app/orders/: dao.py  models.py  router.py  schemas.py  services.py
app/products/: dao.py  models.py  router.py  schemas.py
app/tests/: conftest.py  test_order_items.json  test_orders.json  test_orders_items.json  test_products.json
app/tests/integration_tests/: test_integra_orders.py
app/tests/unit_tests/: test_unit_dao.py  test_unit_orders.py  test_unit_products.py
docker_compose/: app.yml  db.yml
migrations/: env.py
migrations/versions/: 02d7e0b37586_initial_migration.py  21d95ad67ad7_init_migration.py  8ddfe909e138_add_default_value_for_created_at_in_.py  baad657c505c_changed_order_model_created_at.py  ca2bd783c422_init_migration.py
